<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:signature="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons_container"
            android:id="@+id/signature_pad_container">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:layout_above="@+id/signature_pad_description" />

        <TextView
                android:id="@+id/signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true" />

        <cn.ac.iscas.handwriter.views.SignaturePad
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signature_pad" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/option_button"
            android:id="@+id/option_btn"
            android:onClick="onOptionClicked"
            android:background="@drawable/round_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp" />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/buttons_container"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn"
                android:enabled="false" />

        <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/confirm_btn"
                android:enabled="false" />
    </LinearLayout>

</RelativeLayout>